# sygma-substrate-pallets

./: .gitignore  .release-please-manifest.json  Cargo.toml  Dockerfile  Dockerfile_e2e  Dockerfile_subbridge_e2e  Dockerfile_subbridge_e2e_remote  Dockerfile_tangle_standalone_e2e  Dockerfile_xcm_e2e  Makefile  README.md  deny.toml  release-please-config.json  rust-toolchain
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md
.github/actions/install_toolchain/: action.yml
.github/workflows/: build.yml  check.yml  compile-check.yml  docker-build-push.yml  e2e-docker-build-push.yml  pr.yml  release.yml  subbridge-e2e-docker-build-push.yml  tangle-e2e-docker-build-push.yml  test.yml
access-segregator/: CHANGELOG.md  Cargo.toml
access-segregator/src/: lib.rs  mock.rs  weights.rs
basic-fee-handler/: CHANGELOG.md  Cargo.toml
basic-fee-handler/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
bridge/: CHANGELOG.md  Cargo.toml
bridge-forwarder/: Cargo.toml
bridge-forwarder/src/: lib.rs  mock.rs  xcm_asset_transactor.rs
bridge/runtime-api/: Cargo.toml
bridge/src/: abi.rs  benchmarking.rs  eip712.rs  encode.rs  lib.rs  migration.rs  mock.rs  weights.rs  xcm_asset_transactor.rs
docs/: Fees.md
example/: docker-compose.yml
fee-handler-router/: CHANGELOG.md  Cargo.toml
fee-handler-router/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
parachain-info/: Cargo.toml
parachain-info/src/: lib.rs
percentage-fee-handler/: Cargo.toml
percentage-fee-handler/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
rpc/: CHANGELOG.md  Cargo.toml
rpc/src/: lib.rs
runtime-api/: CHANGELOG.md  Cargo.toml
runtime-api/src/: lib.rs
scripts/: cleanup.sh  e2e_image_build.sh  e2e_setup.sh  start_substrate_node.sh  xcm_e2e_setup.sh
scripts/js/: execute_proposal_test.js  package.json  setup.js  util.js
scripts/phala-subbridge/: cleanup.sh  e2e_build_launch.sh  e2e_build_launch_local.sh  e2e_build_launch_remote.sh  e2e_prebuild_launch.sh  e2e_setup.sh  e2e_setup_local.sh  e2e_setup_remote.sh  khala-e2e.config.json
scripts/standalone/: execute_proposal_test.js  setup.js  util.js
scripts/tangle/: e2e_setup.sh
scripts/xcm/: e2e_tests.js  package.json  setup.js  util.js
substrate-node/node/: Cargo.toml
substrate-node/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
substrate-node/parachain/node/: Cargo.toml
substrate-node/parachain/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
substrate-node/parachain/runtime/: Cargo.toml  build.rs
substrate-node/parachain/runtime/src/: lib.rs  xcm_config.rs
substrate-node/parachain/runtime/src/weights/: mod.rs
substrate-node/runtime/: Cargo.toml  build.rs
substrate-node/runtime/src/: lib.rs  xcm_config.rs
substrate-node/standalone/node/: Cargo.toml  build.rs
substrate-node/standalone/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
substrate-node/standalone/runtime/: Cargo.toml  build.rs
substrate-node/standalone/runtime/src/: lib.rs
traits/: CHANGELOG.md  Cargo.toml
traits/src/: lib.rs
xcm-bridge/: Cargo.toml
xcm-bridge/src/: lib.rs  mock.rs
xcm-bridge/src/mock/: mod.rs  para.rs  relay.rs
xcm-mock-message-queue/: Cargo.toml
xcm-mock-message-queue/src/: lib.rs
zombienet/: bridge_hub_rococo_local_network.toml  local_zombienet.toml
zombienet/scripts/: zombienet_prepare.sh
