[workspace]
resolver = "2"

members = [
    "access-segregator",
    "basic-fee-handler",
    "percentage-fee-handler",
    "bridge",
    "fee-handler-router",
    "traits",
    "runtime-api",
    "rpc",
    "substrate-node/node",
    "substrate-node/runtime",
    "parachain-info",
    "bridge-forwarder",
    "xcm-bridge"
]

exclude = [

]

[profile.release]
panic = "unwind"
