[workspace]
resolver = "2"

members = [
    "access-segregator",
    "basic-fee-handler",
    "percentage-fee-handler",
    "bridge",
    "fee-handler-router",
    "traits",
    "runtime-api",
    "rpc",
    "substrate-node/parachain/node",
    "substrate-node/parachain/runtime",
    "substrate-node/standalone/node",
    "substrate-node/standalone/runtime",
    "parachain-info",
    "bridge-forwarder",
    "xcm-bridge",
    "xcm-mock-message-queue"
]

exclude = [

]

[profile.release]
panic = "unwind"
