[package]
name = "sygma-access-segregator"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde", "decode"] }

# Substrate
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
frame-benchmarking = { version = "29.0.0", default-features = false, optional = true }
sp-std = { version = "14.0.0", default-features = false }

[dev-dependencies]
# Substrate
sp-runtime = { version = "32.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-std/std",
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
try-runtime = ["frame-support/try-runtime"]
