[package]
name = "sygma-bridge-forwarder"
version = "0.3.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde", "decode"] }
hex-literal = { version = "0.3", default-features =  false }

# Substrate
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
pallet-assets = { version = "30.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }

# Polkadot
xcm = { version = "8.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "8.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "8.0.1", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-primitives-core = { version = "0.8.0", default-features = false }
cumulus-pallet-xcm = { version = "0.8.0", default-features = false }
cumulus-primitives-utility = { version = "0.8.0", default-features = false }

# Local
sygma-traits = { path = "../traits", default-features = false }

[dev-dependencies]
# Substrate
sp-runtime = { version = "32.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
pallet-assets = { version = "30.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }
pallet-timestamp = { version = "28.0.0", default-features = false }

# Polkadot
polkadot-parachain-primitives = { version = "7.0.0", default-features = false }

# Local
sygma-traits = { path = "../traits" }
pallet-parachain-info = { path = "../parachain-info" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-utility/std",
    "cumulus-pallet-xcm/std",
    "sygma-traits/std",
]
runtime-benchmarks = [
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
try-runtime = ["frame-support/try-runtime"]
