[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-parachain-info"
version = "0.1.0"
license = "LGPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }

cumulus-primitives-core = { version = "0.8.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
