[package]
name = "sygma-rpc"
version = "0.2.1"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
scale-info = { version = "2.5.0" }
jsonrpsee = { version = "0.20.3", features = ["server", "macros"] }

# Substrate
sp-runtime = { version = "32.0.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sp-blockchain = { version = "29.0.0", default-features = false }
sc-client-api = { version = "29.0.0", default-features = false }
sc-rpc = { version = "30.0.0", default-features = false }

sygma-runtime-api = { path = "../runtime-api", default-features = false }
sygma-traits = { path = "../traits", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-api/std",
    "sygma-runtime-api/std",
    "sygma-traits/std",
]
